--- a/css/style.css
+++ b/css/style.css
@@ -663,22 +663,37 @@ footer {
 /* GALERÍA > FLECHAS + EXIT */
 
 .lightbox-exit {
-	position: absolute;
 	font-size: 2em;
-	color: var(--secundario);
-	padding: 10px;
-	top: 30px;
+	top: 10%;
 	right: 10px;
+	width: 2em;
+	height: 2em;
+	border-radius: 50%;
+	display: flex !important;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	font-size: 1em;
+	color: var(--secundario);
+	background-color: var(--primario);
 	cursor: pointer;
+	opacity: 0.75;
 }
 
 .lightbox-prev,
 .lightbox-next {
+	width: 2em;
+	height: 2em;
+	border-radius: 50%;
+	display: flex !important;
+	align-items: center;
+	justify-content: center;
 	position: absolute;
-	font-size: 2em;
+	font-size: 1em;
 	color: var(--secundario);
-	padding: 10px;
+	background-color: var(--primario);
 	cursor: pointer;
+	opacity: 0.75;
 }
 
 .lightbox-prev {
@@ -862,35 +877,6 @@ footer {
 		filter: grayscale(1);
 		cursor: pointer;
 	}
-
-	/* GALERÍA > FLECHAS + EXIT */
-
-	.lightbox-exit {
-		position: absolute;
-		font-size: 2em;
-		color: var(--secundario);
-		padding: 10px;
-		top: 30px;
-		right: -20px;
-		cursor: pointer;
-	}
-
-	.lightbox-prev,
-	.lightbox-next {
-		position: absolute;
-		font-size: 2em;
-		color: var(--secundario);
-		padding: 10px;
-		cursor: pointer;
-	}
-
-	.lightbox-prev {
-		left: -20px;
-	}
-
-	.lightbox-next {
-		right: -20px;
-	}
 }
 
 @media (max-width: 600px) {
@@ -1008,49 +994,5 @@ footer {
 		width: 100%;
 		height: 100%;
 		object-fit: contain;
-	}
-
-	/* GALERÍA > FLECHAS + EXIT */
-
-	.lightbox-exit {
-		font-size: 30px;
-		top: 10%;
-		right: 10px;
-		width: 30px;
-		height: 30px;
-		border-radius: 50%;
-		display: flex !important;
-		align-items: center;
-		justify-content: center;
-		position: absolute;
-		font-size: 15px;
-		color: var(--secundario);
-		background-color: var(--primario);
-		cursor: pointer;
-		opacity: 0.75;
-	}
-
-	.lightbox-prev,
-	.lightbox-next {
-		width: 30px;
-		height: 30px;
-		border-radius: 50%;
-		display: flex !important;
-		align-items: center;
-		justify-content: center;
-		position: absolute;
-		font-size: 15px;
-		color: var(--secundario);
-		background-color: var(--primario);
-		cursor: pointer;
-		opacity: 0.75;
-	}
-
-	.lightbox-prev {
-		left: 10px;
-	}
-
-	.lightbox-next {
-		right: 10px;
 	}
 }
