--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ li {
 	height: 1px;
 	margin: 7px auto;
 	transition: all 300ms ease-in-out;
-	background-color: white;
+	background-color: var(--secundario);
 }
 
 /* FOOTER */
@@ -780,7 +780,7 @@ footer {
 		align-items: flex-start;
 		justify-content: flex-start;
 		gap: 30px;
-		background-color: #191919;
+		background-color: var(--primario);
 		width: 100%;
 		transition: 600ms;
 		height: 100vh;
