--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,18 @@
 
 /* ANIMACIONES */
 
+@keyframes rotate-in-center {
+	0% {
+		transform: rotate(-360deg);
+		opacity: 0;
+	}
+
+	100% {
+		transform: rotate(0);
+		opacity: 1;
+	}
+}
+
 @keyframes line {
 	0% {
 		transform-origin: left;
@@ -114,6 +126,27 @@ p {
 	font-size: 1em;
 	line-height: 1.8;
 	font-weight: 400;
+}
+
+#loader {
+	position: fixed;
+	z-index: 999;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--primario);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	opacity: 1;
+	transition: opacity 300ms ease;
+}
+
+#loader img {
+	width: 30vh;
+	animation: rotate-in-center 600ms cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	;
 }
 
 /* BOTÓN SUBIR */
