--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,9 @@ p {
 	font-weight: 400;
 }
 
+/* CARGA */
+
+
 #loader {
 	position: fixed;
 	z-index: 999;
@@ -146,7 +149,6 @@ p {
 #loader img {
 	width: 30vh;
 	animation: rotate-in-center 600ms cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	;
 }
 
 /* BOTÓN SUBIR */
@@ -785,6 +787,12 @@ footer {
 		--miPaddingL: 0 80px;
 		--miPaddingSection: 100px 80px;
 		--miMarginDiv: 40px;
+	}
+
+	/* CARGA */
+
+	#loader img {
+		width: 15vh;
 	}
 
 	/* HEADER */
