--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ p {
 
 #loader {
 	position: fixed;
-	z-index: 999;
+	z-index: 1000;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -143,7 +143,7 @@ p {
 	justify-content: center;
 	align-items: center;
 	opacity: 1;
-	transition: opacity 300ms ease;
+	transition: opacity 500ms ease;
 }
 
 #loader img {
@@ -166,7 +166,7 @@ p {
 	border: none;
 	/* lo escondo para después hacerlo aparecer con js */
 	right: -200px;
-	bottom: 30px;
+	bottom: 20px;
 	transition: all 500ms;
 	cursor: pointer;
 }
@@ -211,6 +211,10 @@ nav {
 	display: flex;
 	align-items: center;
 	gap: 30px;
+}
+
+nav img {
+	display: none;
 }
 
 li {
@@ -832,6 +836,18 @@ footer {
 		left: 0;
 	}
 
+	nav {
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	nav img {
+		display: flex;
+		height: 30px;
+		width: 30px;
+	}
+
 	/* FOOTER */
 
 	footer {
@@ -953,10 +969,6 @@ footer {
 
 	.btn-up {
 		border: 1px solid var(--secundario);
-	}
-
-	.btn-up a {
-		font-size: 15px;
 	}
 
 	/* HOME */
