personalización del scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,18 @@ html {
 	scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar{
+	width: 4px;
+}
+
+::-webkit-scrollbar-track{
+	background-color: var(--primario);
+}
+
+::-webkit-scrollbar-thumb{
+	background-color: var(--secundario);
+}
+
 body {
 	/* para que el header no tape el main */
 	padding-top: 60px;
