--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 	text-decoration: none;
 }
 
-/* VARIABLES */
+/* Variables */
 
 :root {
 	--secundario: #f6f6f6;
@@ -21,7 +21,7 @@
 	--miMarginFooter: 120px 12vw 60px;
 }
 
-/* ANIMACIONES */
+/* Animaciones */
 
 @keyframes rotate-in-center {
 	0% {
@@ -100,7 +100,7 @@
 	}
 }
 
-/* GENERAL */
+/* General */
 
 html {
 	scroll-behavior: smooth;
@@ -150,12 +150,12 @@ p {
 	font-weight: 400;
 }
 
-/* CARGA */
+/* Carga */
 
 
 #loader {
 	position: fixed;
-	z-index: 1000;
+	z-index: 15;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -173,7 +173,7 @@ p {
 	animation: rotate-in-center 600ms cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
-/* BOTÓN SUBIR */
+/* Botón subir */
 
 .btn-up {
 	width: 40px;
@@ -201,7 +201,7 @@ p {
 	display: none;
 }
 
-/* LÍNEAS DIVISORIAS */
+/* Líneas divisorias */
 
 .line-container {
 	padding: var(--miPaddingL);
@@ -215,7 +215,7 @@ p {
 	animation: line 3s infinite;
 }
 
-/* HEADER */
+/* Header */
 
 header {
 	width: 100%;
@@ -299,7 +299,7 @@ li {
 	margin-bottom: 0;
 }
 
-/* FOOTER */
+/* Footer */
 
 footer {
 	width: 100%;
@@ -333,7 +333,7 @@ footer {
 	color: var(--primario);
 }
 
-/* HOME */
+/* Home */
 
 #home {
 	width: 100%;
@@ -355,7 +355,7 @@ footer {
 	letter-spacing: 2px;
 }
 
-/* SOBRE MÍ */
+/* Sobre mí */
 
 #about {
 	width: 100%;
@@ -372,7 +372,7 @@ footer {
 	margin-bottom: var(--miMarginDiv);
 }
 
-/* FORMACIÓN */
+/* Formación */
 
 #formacion {
 	background-color: var(--secundario);
@@ -380,7 +380,7 @@ footer {
 	color: var(--primario);
 }
 
-/* FORMACIÓN > LÍNEA */
+/* Formación > línea */
 
 .timeline_mobile {
 	display: none;
@@ -394,7 +394,7 @@ footer {
 	position: relative;
 }
 
-/* FORMACIÓN > LÍNEA MEDIO */
+/* Formación > línea medio */
 
 .timeline::before {
 	content: "";
@@ -406,7 +406,7 @@ footer {
 	background-color: var(--primario);
 }
 
-/* FORMACIÓN > LÍNEA> CONTENIDO */
+/* Formación > línea > contenido */
 
 .timeline ul li {
 	width: 50%;
@@ -415,7 +415,7 @@ footer {
 	margin-bottom: 50px;
 }
 
-/* FORMACIÓN > LÍNEA > PARTE IZQUIERDA */
+/* Formación > línea > parte izquierda */
 
 .timeline ul li:nth-child(odd) {
 	float: left;
@@ -429,7 +429,7 @@ footer {
 	transform: translate(50%, -50%);
 }
 
-/* FORMACIÓN > LÍNEA > PARTE DERECHA */
+/* Formación > línea > parte derecha */
 
 .timeline ul li:nth-child(even) {
 	float: right;
@@ -443,13 +443,13 @@ footer {
 	transform: translate(-50%, -50%);
 }
 
-/* le quito el margin-bottom al último li */
+/* Le quito el margin-bottom al último li */
 
 .timeline ul li:last-child {
 	margin-bottom: 0;
 }
 
-/* FORMACIÓN > LÍNEA > DATOS */
+/* Formación > línea > datos */
 
 .time-content .date {
 	font-size: 0.6em;
@@ -465,7 +465,7 @@ footer {
 	color: var(--secundario);
 }
 
-/* TRABAJOS */
+/* Trabajos */
 
 #work {
 	background-color: var(--secundario);
@@ -498,7 +498,7 @@ footer {
 	animation: blink-1 600ms both;
 }
 
-/* CONTACTO */
+/* Contacto */
 
 #contacto {
 	background-color: var(--secundario);
@@ -578,7 +578,7 @@ footer {
 	font-size: 25px;
 }
 
-/* HOVER REDES SOCIALES */
+/* Hover redes sociales */
 
 .fa-behance:hover {
 	color: #1769ff;
@@ -625,9 +625,9 @@ footer {
 	transition: all 500ms;
 }
 
-/* PAGES */
+/* Páginas */
 
-/* PRESENTACIÓN DISEÑOS */
+/* Presentación de diseños */
 
 #present-design {
 	width: 100%;
@@ -655,7 +655,7 @@ footer {
 	width: 40%;
 }
 
-/* GALERÍA */
+/* Galería */
 
 #gallery {
 	padding: var(--miPaddingSection);
@@ -703,9 +703,9 @@ footer {
 	object-fit: cover;
 }
 
-/* GALERÍA > IMAGEN ABIERTA */
+/* Galería > imágen abierta */
 
-/* GALERÍA > IMAGEN ABIERTA > FONDO */
+/* Galería > imágen abierta > fondo */
 
 .lightbox {
 	position: fixed;
@@ -719,7 +719,7 @@ footer {
 	z-index: 10;
 }
 
-/* GALERÍA > IMAGEN ABIERTA > CONTAINER IMAGEN */
+/* Galería > imágen abierta > container de imágen */
 
 .lightbox-content {
 	width: 70%;
@@ -737,7 +737,7 @@ footer {
 	object-fit: contain;
 }
 
-/* GALERÍA > FLECHAS + EXIT */
+/* Galería > flechas + exit */
 
 .lightbox-exit {
 	font-size: 2em;
@@ -781,29 +781,29 @@ footer {
 	right: 10px;
 }
 
-/* RESPONSIVE */
+/* Responsive */
 
 @media (max-width: 1200px) {
 
-	/* HOME */
+	/* Home */
 
 	p {
 		font-size: 0.8em;
 	}
 
-	/* TRABAJOS */
+	/* Trabajos */
 
 	.work-container {
 		grid-template: repeat(1, 350px) / repeat(2, 1fr);
 	}
 
-	/* GALERÍA */
+	/* Galería */
 
 	#gallery h3 {
 		font-size: 0.8em;
 	}
 
-	/* CONTACTO */
+	/* Contacto */
 
 	.form-container {
 		gap: 60px;
@@ -812,7 +812,7 @@ footer {
 
 @media (max-width: 900px) {
 
-	/* VARIABLES */
+	/* Variables */
 
 	:root {
 		--miPaddingL: 0 10vw;
@@ -874,7 +874,7 @@ footer {
 		height: 24px;
 	}
 
-	/* FOOTER */
+	/* Footer */
 
 	footer {
 		flex-direction: column;
@@ -926,7 +926,7 @@ footer {
 		transform: scale(1.1);
 	}
 
-	/* CONTACTO */
+	/* Contacto */
 
 	.form-container {
 		width: 100%;
@@ -965,9 +965,9 @@ footer {
 		font-size: 20px;
 	}
 
-	/* PAGES */
+	/* Págians */
 
-	/* GALERÍA */
+	/* Galería */
 
 	.gallery-container {
 		grid-template: repeat(1, 250px) / repeat(2, 1fr);
@@ -984,7 +984,7 @@ footer {
 
 @media (max-width: 600px) {
 
-	/* VARIABLES */
+	/* Variables */
 
 	:root {
 		--miPaddingL: 0 12vw;
@@ -996,13 +996,13 @@ footer {
 		padding: 70px 50px 40px;
 	}
 
-	/* BOTÓN SUBIR */
+	/* Botón subir */
 
 	.btn-up {
 		border: 1px solid var(--secundario);
 	}
 
-	/* HOME */
+	/* Home */
 
 	h1 {
 		font-size: 3.5em;
@@ -1016,13 +1016,13 @@ footer {
 		font-size: 0.8em;
 	}
 
-	/* SOBRE MÍ */
+	/* Sobre mí */
 
 	#about .about-data {
 		width: 100%;
 	}
 
-	/* FORMACIÓN > LÍNEA */
+	/* Formación > línea */
 
 	.timeline {
 		display: none;
@@ -1053,7 +1053,7 @@ footer {
 		font-size: 0.8em;
 	}
 
-	/* TRABAJOS */
+	/* Trabajos */
 
 	.work-container {
 		grid-template: repeat(1, 350px) / repeat(1, 1fr)
@@ -1063,15 +1063,15 @@ footer {
 		font-size: 1.5em;
 	}
 
-	/* PAGES */
+	/* Páginas */
 
-	/* PRESENTACIÓN DISEÑOS */
+	/* Presentación de diseños */
 
 	#present-design p {
 		width: 100%;
 	}
 
-	/* GALERÍA */
+	/* Galería */
 
 	#gallery h3 {
 		font-size: 0.7em;
@@ -1081,7 +1081,7 @@ footer {
 		grid-template: repeat(1, 250px) / repeat(1, 1fr);
 	}
 
-	/* GALERÍA > IMAGEN ABIERTA > CONTAINER IMAGEN */
+	/* Galería > imágen abierta > container de imágen */
 
 	.lightbox-content {
 		width: 90%;
