--- a/css/style.css
+++ b/css/style.css
@@ -703,6 +703,13 @@ footer {
 	object-fit: cover;
 }
 
+#gallery .ficha{
+	display: grid;
+	grid-template: repeat(1, 1fr) / repeat(6, 1fr);
+	column-gap: 50px;
+	font-size: 0.7em;
+}
+
 /* Galería > imágen abierta */
 
 /* Galería > imágen abierta > fondo */
@@ -973,6 +980,12 @@ footer {
 		grid-template: repeat(1, 250px) / repeat(2, 1fr);
 	}
 
+	#gallery .ficha{
+		display: grid;
+		grid-template: repeat(1, 1fr) / repeat(3, 1fr);
+		row-gap: 10px;
+	}	
+
 	.lightbox-content {
 		height: 55vh;
 	}
@@ -1080,6 +1093,13 @@ footer {
 	.gallery-container {
 		grid-template: repeat(1, 250px) / repeat(1, 1fr);
 	}
+
+	#gallery .ficha{
+		display: grid;
+		grid-template: repeat(1, 1fr) / repeat(3, 1fr);
+		row-gap: 10px;
+		font-size: 0.5em;
+	}	
 
 	/* Galería > imágen abierta > container de imágen */
 
