--- a/css/style.css
+++ b/css/style.css
@@ -1098,6 +1098,7 @@ footer {
 		display: grid;
 		grid-template: repeat(1, 1fr) / repeat(3, 1fr);
 		row-gap: 10px;
+		column-gap: 10px;
 		font-size: 0.5em;
 	}	
 
