--- a/css/style.css
+++ b/css/style.css
@@ -106,15 +106,15 @@ html {
 	scroll-behavior: smooth;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
 	width: 4px;
 }
 
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
 	background-color: var(--primario);
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
 	background-color: var(--secundario);
 }
 
@@ -703,7 +703,7 @@ footer {
 	object-fit: cover;
 }
 
-#gallery .ficha{
+#gallery .ficha {
 	display: grid;
 	grid-template: repeat(1, 1fr) / repeat(6, 1fr);
 	column-gap: 50px;
@@ -972,7 +972,7 @@ footer {
 		font-size: 20px;
 	}
 
-	/* Págians */
+	/* Páginas */
 
 	/* Galería */
 
@@ -980,11 +980,11 @@ footer {
 		grid-template: repeat(1, 250px) / repeat(2, 1fr);
 	}
 
-	#gallery .ficha{
+	#gallery .ficha {
 		display: grid;
 		grid-template: repeat(1, 1fr) / repeat(3, 1fr);
-		row-gap: 10px;
-	}	
+		gap: 25px;
+	}
 
 	.lightbox-content {
 		height: 55vh;
@@ -1094,13 +1094,11 @@ footer {
 		grid-template: repeat(1, 250px) / repeat(1, 1fr);
 	}
 
-	#gallery .ficha{
+	#gallery .ficha {
 		display: grid;
-		grid-template: repeat(1, 1fr) / repeat(3, 1fr);
-		row-gap: 10px;
-		column-gap: 10px;
-		font-size: 0.5em;
-	}	
+		grid-template: repeat(1, 1fr) / repeat(2, 1fr);
+		gap: 10px;
+	}
 
 	/* Galería > imágen abierta > container de imágen */
 
