--- a/css/style.css
+++ b/css/style.css
@@ -605,7 +605,7 @@ footer {
 	transition: all 500ms;
 }
 
-.fa-twitter:hover {
+.fa-x-twitter:hover {
 	color: #1da1f2;
 	transition: all 500ms;
 }
@@ -688,13 +688,12 @@ footer {
 
 .gallery-item {
 	height: 250px;
-	filter: grayscale(1);
 	cursor: pointer;
 }
 
 .gallery-item:hover {
-	transition: all 600ms;
-	filter: grayscale(0);
+	transition: ease-in-out 600ms;
+	rotate: -5deg;
 }
 
 .gallery-item img {
@@ -963,6 +962,10 @@ footer {
 		text-align: center;
 	}
 
+	.contacto-other h3{
+		display: none;
+	}
+
 	.contacto-other ul {
 		justify-content: center;
 		gap: 15px
@@ -980,6 +983,10 @@ footer {
 		grid-template: repeat(1, 250px) / repeat(2, 1fr);
 	}
 
+	.gallery-item:hover {
+		rotate: none;
+	}
+
 	#gallery .ficha {
 		display: grid;
 		grid-template: repeat(1, 1fr) / repeat(3, 1fr);
@@ -992,6 +999,19 @@ footer {
 
 	.lightbox-exit {
 		top: -90px;
+	}
+
+	/* Galería > imágen abierta > container de imágen */
+
+	.lightbox-content {
+		width: 90%;
+		padding: 10px 0;
+	}
+
+	.lightbox-content img {
+		width: 100%;
+		height: 100%;
+		object-fit: contain;
 	}
 }
 
@@ -1098,18 +1118,5 @@ footer {
 		display: grid;
 		grid-template: repeat(1, 1fr) / repeat(2, 1fr);
 		gap: 10px;
-	}
-
-	/* Galería > imágen abierta > container de imágen */
-
-	.lightbox-content {
-		width: 90%;
-		padding: 10px 0;
-	}
-
-	.lightbox-content img {
-		width: 100%;
-		height: 100%;
-		object-fit: contain;
 	}
 }
