--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@
 /* Variables */
 
 :root {
-	--secundario: #f6f6f6;
-	--primario: #191919;
+	--secundario: #edf4f5;
+	--primario: #232120;
 	--miPaddingL: 0 12vw;
 	--miPaddingSection: 120px 12vw;
 	--miMarginDiv: 60px;
