--- a/css/style.css
+++ b/css/style.css
@@ -457,18 +457,6 @@ footer {
 	color: var(--secundario);
 }
 
-/* Experiencia
-
-#experiencia {
-	background-color: var(--secundario);
-	padding: var(--miPaddingSection);
-	color: var(--primario);
-}
-
-#experiencia h2 {
-	margin-bottom: calc(var(--miMarginDiv) + 10px);
-} */
-
 /* Trabajos */
 
 #work {
@@ -481,12 +469,12 @@ footer {
 	width: 100%;
 	margin-top: var(--miMarginDiv);
 	display: grid;
-	grid-template: repeat(1, 350px) / repeat(3, 1fr);
 	gap: 50px 50px;
+	grid-template: repeat(3, 300px) / repeat(6, 1fr);
 }
 
 .work-container a {
-	height: 350px;
+	height: 300px;
 	display: flex;
 	align-items: flex-end;
 	font-size: 2em;
@@ -500,6 +488,31 @@ footer {
 	color: var(--primario);
 	transition: all 500ms;
 	animation: blink-1 600ms both;
+}
+
+.caja-br{
+	grid-column: 1 / 7;
+	grid-row: 1;
+}
+
+.caja-ed{
+	grid-column: 1 / 5;
+	grid-row: 2;
+}
+
+.caja-lt{
+	grid-column: 1 / 3;
+	grid-row: 3;
+}
+
+.caja-ux{
+	grid-column: 3 / 7;
+	grid-row: 3;
+}
+
+.caja-aq{
+	grid-column: 5 / 7;
+	grid-row: 2;
 }
 
 /* Contacto */
@@ -710,6 +723,10 @@ footer {
 	font-size: 0.7em;
 }
 
+#gallery .ficha a {
+	color: var(--primario);
+}
+
 /* Galería > imágen abierta */
 
 /* Galería > imágen abierta > fondo */
@@ -849,8 +866,28 @@ footer {
 	/* Trabajos */
 
 	.work-container {
-		grid-template: repeat(1, 350px) / repeat(2, 1fr);
+		grid-template: repeat(3, 300px) / repeat(6, 1fr);
 	}
+	
+	.caja-ed{
+		grid-column: 1 / 4;
+		grid-row: 2;
+	}
+	
+	.caja-lt{
+		grid-column: 1 / 4;
+		grid-row: 3;
+	}
+	
+	.caja-ux{
+		grid-column: 4 / 7;
+		grid-row: 3;
+	}
+	
+	.caja-aq{
+		grid-column: 4 / 7;
+		grid-row: 2;
+	}	
 
 	/* Galería */
 
@@ -1096,8 +1133,34 @@ footer {
 	/* Trabajos */
 
 	.work-container {
-		grid-template: repeat(1, 350px) / repeat(1, 1fr)
+		grid-template: repeat(5, 300px) / repeat(1, 1fr)
 	}
+
+	.caja-br{
+		grid-column: 1;
+		grid-row: 1;
+	}
+	
+	.caja-ed{
+		grid-column: 1;
+		grid-row: 2;
+	}
+	
+	.caja-lt{
+		grid-column: 1;
+		grid-row: 4;
+	}
+	
+	.caja-ux{
+		grid-column: 1;
+		grid-row: 5;
+	}
+	
+	.caja-aq{
+		grid-column: 1;
+		grid-row: 3;
+	}
+	
 
 	.work-container a {
 		font-size: 1.5em;
