--- a/css/style.css
+++ b/css/style.css
@@ -140,26 +140,31 @@ p {
 
 /* Carga */
 
-
-#loader {
+#splash-background {
 	position: fixed;
-	z-index: 15;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	background-color: var(--primario);
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	z-index: 900;
+  }
+  
+  #splash-animation {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50vw; 
+	height: 50vh;
+	z-index: 1000;
+	transition: opacity 500ms ease-out;
 	opacity: 1;
-	transition: opacity 500ms ease;
-}
-
-#loader img {
-	width: 30vh;
-	animation: rotate-in-center 600ms cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-}
+  }
+  
+  #splash-animation.hidden {
+	opacity: 0;
+  }
 
 /* Botón subir */
 
