--- a/css/style.css
+++ b/css/style.css
@@ -933,6 +933,13 @@ footer {
 		font-size: 0.8em;
 	}
 
+	#home .btn-go {
+		position: absolute;
+		top: 80%;
+		bottom: 0;
+		transition: 500ms;
+	}
+
 	/* Trabajos */
 
 	.work-container {
@@ -1032,9 +1039,12 @@ footer {
 
 	#home .btn-go {
 		display: block;
-		top: 80%;
 		font-size: 3em;
-	}	
+		top: 60%;
+		left: 0;
+		right: 0;
+		margin: auto;
+	}
 
 	/* Contacto */
 
@@ -1088,6 +1098,10 @@ footer {
 
 	#present-design .btn-go {
 		font-size: 3em;
+		top: 60%;
+		left: 0;
+		right: 0;
+		margin: auto;
 	}
 
 	/* Galería */
@@ -1182,13 +1196,6 @@ footer {
 		justify-content: flex-start;
 	}
 
-	#home .btn-go {
-		top: 70%;
-		left: 0;
-		right: 0;
-		margin: auto;
-	}
-
 	/* Sobre mí */
 
 	#about .about-data {
@@ -1278,13 +1285,6 @@ footer {
 
 	#present-design p {
 		width: 100%;
-	}
-
-	#present-design .btn-go {
-		top: 70%;
-		left: 0;
-		right: 0;
-		margin: auto;
 	}
 
 	/* Galería */
