--- a/css/style.css
+++ b/css/style.css
@@ -530,6 +530,11 @@ footer {
 	grid-row: 2;
 }
 
+.caja-rd {
+	grid-column: 1 / 7;
+	grid-row: 4;
+}
+
 /* Contacto */
 
 #contacto {
@@ -850,6 +855,59 @@ footer {
 	background-color: var(--secundario);
 }
 
+/* Muestra de videos */
+
+#gallery .video {
+	display: flex;
+	flex-direction: column;
+	gap: var(--miMarginDiv);
+}
+
+#gallery .video .container {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 450px);
+	grid-gap: 50px;
+}
+
+#gallery .video .container .frame1 {
+	grid-area: 1 / 1 / 2 / 4;
+	/* background-color: red; */
+}
+
+iframe {
+	width: 100%;
+	height: 100%;
+	border: none;
+}
+
+#gallery .video .container .frame2 {
+	grid-area: 2 / 1 / 3 / 2;
+	/* background-color: blue; */
+}
+
+#gallery .video .container .frame3 {
+	grid-area: 2 / 2 / 3 / 3;
+	/* background-color: green */
+}
+
+#gallery .video .container .frame4 {
+	grid-area: 2 / 3 / 3 / 4;
+	/* background-color: yellow */
+}
+
+#gallery .video .container .frame5 {
+	grid-area: 3 / 1 / 4 /2;
+}
+
+#gallery .video .container .frame6 {
+	grid-area: 3 / 2 / 4 / 3;
+}
+
+#gallery .video .container .frame7 {
+	grid-area: 3 / 3 / 4 / 4;
+}
+
 /* Responsive */
 
 @media (max-width: 1200px) {
@@ -917,7 +975,7 @@ footer {
 	/* Trabajos */
 
 	.work-container {
-		grid-template: repeat(3, 300px) / repeat(6, 1fr);
+		grid-template: repeat(4, 300px) / repeat(6, 1fr);
 	}
 
 	.caja-ed {
@@ -959,6 +1017,15 @@ footer {
 		top: 80%;
 		bottom: 0;
 		transition: 500ms;
+	}
+
+	/* Muestra de videos */
+
+	#gallery .video .container {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-template-rows: repeat(3, 350px);
+		grid-gap: 50px;
 	}
 }
 
@@ -1129,6 +1196,41 @@ footer {
 		height: 100%;
 		object-fit: contain;
 	}
+
+	/* Muestra de videos */
+
+	#gallery .video .container {
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: repeat(4, 350px);
+	}
+
+	#gallery .video .container .frame1 {
+		grid-area: 1 / 1 / 2 / 5;
+	}
+
+	#gallery .video .container .frame2 {
+		grid-area: 2 / 1 / 3 / 3;
+	}
+
+	#gallery .video .container .frame3 {
+		grid-area: 2 / 3 / 3 / 5;
+	}
+
+	#gallery .video .container .frame4 {
+		grid-area: 3 / 1 / 4 / 3;
+	}
+
+	#gallery .video .container .frame5 {
+		grid-area: 3 / 3 / 4 /5;
+	}
+
+	#gallery .video .container .frame6 {
+		grid-area: 4 / 1 / 5 / 3;
+	}
+
+	#gallery .video .container .frame7 {
+		grid-area: 4 / 3 / 5 / 5;
+	}
 }
 
 @media (max-width: 600px) {
@@ -1219,7 +1321,7 @@ footer {
 	/* Trabajos */
 
 	.work-container {
-		grid-template: repeat(5, 300px) / repeat(1, 1fr)
+		grid-template: repeat(6, 300px) / repeat(1, 1fr)
 	}
 
 	.caja-br {
@@ -1247,6 +1349,10 @@ footer {
 		grid-row: 3;
 	}
 
+	.caja-rd {
+		grid-column: 1;
+		grid-row: 6;
+	}
 
 	.work-container a {
 		font-size: 1.5em;
@@ -1295,5 +1401,40 @@ footer {
 		top: -10vw;
 		right: 0;
 		margin: auto;
+	}
+
+	/* Muestra de videos */
+
+	#gallery .video .container {
+		grid-template-columns: 1fr;
+		grid-template-rows: repeat(7, 400px);
+	}
+
+	#gallery .video .container .frame1 {
+		grid-area: 1/1/2/2;
+	}
+
+	#gallery .video .container .frame2 {
+		grid-area: 2/1/3/2;
+	}
+
+	#gallery .video .container .frame3 {
+		grid-area: 3/1/4/2;
+	}
+
+	#gallery .video .container .frame4 {
+		grid-area: 4/1/5/2;
+	}
+
+	#gallery .video .container .frame5 {
+		grid-area: 5/1/6/2;
+	}
+
+	#gallery .video .container .frame6 {
+		grid-area: 6/1/7/2;
+	}
+
+	#gallery .video .container .frame7 {
+		grid-area: 7/1/8/2;
 	}
 }
